# cgreen

./: .travis.yml  CMakeLists.txt  DefineOptions.cmake  Makefile  README.md
tools/: CMakeLists.txt  discoverer.c  discoverer_bfd.c  discoverer_dl.c  discoverer_utils.c  discoverer_utils.h  dl_adapter.c  dl_adapter.h  dl_adapter.mocks
tools/tests/: CMakeLists.txt  discoverer_acceptance_tests.c  discoverer_bfd_unit_tests.c  discoverer_unit_tests.c
